GNOME Bugzilla – Bug 745061
st-private: fix cogl orthographic projection matrix
Last modified: 2015-02-24 00:51:43 UTC
See patch
Created attachment 297725 [details] [review] st-private: fix cogl orthographic projection matrix Commit 1c1f63a7d7a5f0be5a796679d029a6b0c600b838 changed the shadow pipeline to use cogl_framebuffer_ortographic() instead of cogl_ortho(), but the two functions take their arguments in a different order. Fixes graphical corruption for text shadows in the login screen.
Review of attachment 297725 [details] [review]: Yes.
Attachment 297725 [details] pushed as 5bdaffd - st-private: fix cogl orthographic projection matrix