st-private: fix cogl orthographic projection matrix

Commit 1c1f63a7d7a5f0be5a796679d029a6b0c600b838 changed the shadow
pipeline to use cogl_framebuffer_ortographic() instead of cogl_ortho(),
but the two functions take their arguments in a different order.

Fixes graphical corruption for text shadows in the login screen.

https://bugzilla.gnome.org/show_bug.cgi?id=745061