src/st/st-private.c
@@ -459,7 +459,7 @@ _st_create_shadow_pipeline_from_actor (StShadow     *shadow_spec,
 
       cogl_framebuffer_clear (fb, COGL_BUFFER_BIT_COLOR, &clear_color);
       cogl_framebuffer_translate (fb, -box.x1, -box.y1, 0);
-      cogl_framebuffer_orthographic (fb, 0, width, height, 0, 0, 1.0);
+      cogl_framebuffer_orthographic (fb, 0, 0, width, height, 0, 1.0);
 
       clutter_actor_set_opacity_override (actor, 255);
       clutter_actor_paint (actor);
